<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/usreprofile"
        android:icon="@drawable/ic_baseline_person_8"
        android:title="profile"
        app:showAsAction="ifRoom"

        ></item>
    <item
        android:id="@+id/mainmenu"
        android:icon="@drawable/ic_baseline_home_8"
        android:title="mainmenu"
        app:showAsAction="ifRoom"

        ></item>

    <item
        android:id="@+id/post_circulars"
        android:title="post circulars"
        app:showAsAction="ifRoom"
        ></item>
    <item
        android:id="@+id/msg"
        android:title="messages"
        app:showAsAction="ifRoom"
        ></item>
    <item

        android:id="@+id/buildings"
        android:title="select building"
        app:showAsAction="ifRoom"
        >
        <menu>
            <item
                android:id="@+id/NorthGate"
                android:title="North Gate"
                app:showAsAction="ifRoom"
                >

            </item>
            <item
                android:id="@+id/East_Gate"
                android:title="East Gate"
                app:showAsAction="ifRoom"
                >

            </item>
            <item
                android:id="@+id/New_East_Gate"
                android:title="New East Gate"
                app:showAsAction="ifRoom"
                >

            </item>
            <item
                android:id="@+id/library_building"
                android:title="@string/library_building"
                app:showAsAction="ifRoom"
                tools:ignore="HardcodedText">

            </item>
            <item
                android:id="@+id/pharmacy_building"
                android:title="@string/pharmacy_building"
                app:showAsAction="ifRoom"
                tools:ignore="HardcodedText">

            </item>
            <item
                android:id="@+id/subitem6"
                android:title="@string/science_building"
                app:showAsAction="ifRoom"
                tools:ignore="HardcodedText">

            </item>
            <item
                android:id="@+id/aljajera_building"
                android:title="@string/aljazerah_building"
                app:showAsAction="ifRoom"
                tools:ignore="HardcodedText">

            </item>
            <item
                android:id="@+id/subitem8"
                android:title="@string/dental_clinic_building"
                app:showAsAction="ifRoom"
                tools:ignore="HardcodedText">

            </item>
            <item
                android:id="@+id/subitem9"
                android:title="@string/Preparatory_building"
                app:showAsAction="ifRoom"
                >

            </item>
            <item
                android:id="@+id/subitem10"
                android:title="@string/tv_building"
                app:showAsAction="ifRoom"
                tools:ignore="HardcodedText">

            </item>
            <item
                android:id="@+id/subitem11"
                android:title="building 12"
                app:showAsAction="ifRoom"
                >

            </item>
        </menu>

    </item>
    <item
        android:id="@+id/Search"
        android:title="Search"

        app:showAsAction="ifRoom"
        ></item>
    <item
        android:id="@+id/Sign_out"
        android:title="Sign out"
        app:showAsAction="ifRoom"
        ></item>

</menu>